# Vapoursynth-MXFJ2KSource

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-static.yml
lib/: MXFJ2KSource.cpp
scripts/: xyz2rgb.vpy
